# g-media-pipeline

./: .gitignore  CMakeLists.txt  README.md
files/: CMakeLists.txt
files/conf/: CMakeLists.txt  g-media-pipeline.conf.in
files/sysbus/: com.webos.g-media-pipeline.api.json  com.webos.g-media-pipeline.groups.json  com.webos.g-media-pipeline.perm.json  com.webos.g-media-pipeline.role.json.in  com.webos.g-media-pipeline.service.in  com.webos.g-pipeline.json.prv.in  g-media-pipeline.manifest.json.in
src/: CMakeLists.txt  main.cpp
src/base/: message.h  types.h
src/dsi/: DSIGenerator.h  DSIGeneratorAAC.cpp  DSIGeneratorAAC.h  DSIGeneratorFactory.cpp  DSIGeneratorFactory.h
src/log/: log.cpp  log.h
src/lsm-connector/: .clang-format  CMakeLists.txt  README.md  clang-format.sh
src/lsm-connector/include/: lsm_connector.h
src/lsm-connector/src/: common.h  lsm_connector.cpp  wayland_exporter.cpp  wayland_exporter.h  wayland_foreign.cpp  wayland_foreign.h  wayland_importer.cpp  wayland_importer.h  wayland_surface.cpp  wayland_surface.h
src/lsm-connector/tests/: CMakeLists.txt
src/lsm-connector/tests/fake/: api_call_checker.cpp  api_call_checker.h  wayland-client.cpp  wayland-client.h  wayland-cursor.h  wayland-egl.h  wayland-webos-foreign-client-protocol.h  wayland-webos-shell-client-protocol.h  wayland-webos-surface-group-client-protocol.h  wayland_foreign.cpp  wayland_importer.cpp  wayland_surface.cpp
src/lsm-connector/tests/lsm_connector/: CMakeLists.txt  gtest_TVDEVTC-3009_lsm_connector.cpp  lsm_connector_test.h
src/lsm-connector/tests/wayland_foreign/: CMakeLists.txt  gtest_TVDEVTC-3009_wayland_foreign.cpp  wayland_foreign_test.h
src/lsm-connector/tests/wayland_importer/: CMakeLists.txt  gtest_TVDEVTC-3009_wayland_importer.cpp  wayland_importer_test.h
src/lsm-connector/tests/wayland_surface/: CMakeLists.txt  gtest_TVDEVTC-3009_wayland_surface.cpp  wayland_surface_test.h
src/lsm-connector/tool/: CMakeLists.txt
src/lsm-connector/tool/exporter/: CMakeLists.txt
src/lsm-connector/tool/exporter/src/: main.cpp  wayland_exporter.cpp  wayland_exporter.h
src/lsm-connector/tool/importer/: CMakeLists.txt
src/lsm-connector/tool/importer/src/: main.cpp
src/lunaserviceclient/: LunaServiceClient.cpp  LunaServiceClient.h
src/mediaplayerclient/: CMakeLists.txt  MediaPlayerClient.cpp  MediaPlayerClient.h  gmp-player-client.pc
src/mediaresource/: requestor.cpp  requestor.h
src/parser/: composer.cpp  composer.h  parser.cpp  parser.h
src/player/: AbstractPlayer.cpp  AbstractPlayer.h  BufferPlainPlayer.cpp  BufferPlainPlayer.h  BufferPlayer.cpp  BufferPlayer.h  CMakeLists.txt  Player.h  PlayerTypes.h  RtpPlayer.cpp  RtpPlayer.h  UriPlainPlayer.cpp  UriPlainPlayer.h  UriPlayer.cpp  UriPlayer.h  gst_debug.conf
src/player/qemux86/: gst_elements.conf
src/player/raspberrypi3/: gst_debug.conf  gst_elements.conf
src/player/raspberrypi4/: gst_debug.conf  gst_elements.conf
src/playerfactory/: ElementFactory.cpp  ElementFactory.h  PlayerFactory.cpp  PlayerFactory.h  UriPlayerFactory.cpp  UriPlayerFactory.h
src/service/: service.cpp  service.h
src/util/: convert_dot.sh  util.cpp  util.h
test/bufferplayer/: BufferPlayerTest.cpp  CMakeLists.txt  StreamSource.cpp  StreamSource.h
test/uriplayer/: CMakeLists.txt  DummyService.cpp  DummyService.h  UriPlayerTest.cpp
